--- a/index.html
+++ b/index.html
@@ -1,5 +1,45 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Communication Client - Calling Sample</title>
+</head>
+<body>
+    <h4>Azure Communication Services</h4>
+    <h1>Teams meeting join quickstart</h1>
+    <input id="teams-link-input" type="text" placeholder="Teams meeting link"
+        style="margin-bottom:1em; width: 300px;" />
+    <p><input id="teams-meetingId-input" type="text" placeholder="Teams meetingId"
+        style="margin-bottom:1em; width: 300px;" /></p>
+    <p><input id="teams-passcode-input" type="text" placeholder="Teams meeting Passcode"
+        style="margin-bottom:1em; width: 300px;" /></p>
+        <p>Call state <span style="font-weight: bold" id="call-state">-</span></p>
+        <p><span style="font-weight: bold" id="recording-state"></span></p>
+    <div>
+        <button id="join-meeting-button" type="button" disabled="false">
+            Join Teams Meeting
+        </button>
+        <button id="hang-up-button" type="button" disabled="true">
+            Hang Up
+        </button>
+      <div>
+        <button id="get-raised-hands-button" type="button" disabled="false">
+          Get Raised Hands
+      </button>
+      <button id="get-meeting-participants" type="button" disabled="false">
+        Get Meeting Participants
+    </button>
+
+    </div>
+    </div>
+    <script src="./main.js" type="module"></script>
+</body>
+
+</html>
+
+
+
+<!-- <!DOCTYPE html>
+<html>
   <head>
     <title>Communication Client - Calling Sample</title>
   </head>
@@ -37,4 +77,4 @@
     </div>
     <script src="./main.js"></script>
   </body>
-</html>
+</html> -->
