--- a/index.html
+++ b/index.html
@@ -1,80 +1,53 @@
+<!-- ngrok http http://localhost:8080 --domain patient-magpie-destined.ngrok-free.app --request-header-add="host: localhost" -->
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Communication Client - Calling Sample</title>
-</head>
-<body>
-    <h4>Azure Communication Services</h4>
-    <h1>Teams meeting join quickstart</h1>
-    <input id="teams-link-input" type="text" placeholder="Teams meeting link"
-        style="margin-bottom:1em; width: 300px;" />
-    <p><input id="teams-meetingId-input" type="text" placeholder="Teams meetingId"
-        style="margin-bottom:1em; width: 300px;" /></p>
-    <p><input id="teams-passcode-input" type="text" placeholder="Teams meeting Passcode"
-        style="margin-bottom:1em; width: 300px;" /></p>
-        <p>Call state <span style="font-weight: bold" id="call-state">-</span></p>
-        <p><span style="font-weight: bold" id="recording-state"></span></p>
-    <div>
-        <button id="join-meeting-button" type="button" disabled="false">
-            Join Teams Meeting
-        </button>
-        <button id="hang-up-button" type="button" disabled="true">
-            Hang Up
-        </button>
-      <div>
-        <button id="get-raised-hands-button" type="button" disabled="false">
-          Get Raised Hands
-      </button>
-      <button id="get-meeting-participants" type="button" disabled="false">
-        Get Meeting Participants
-    </button>
 
-    </div>
-    </div>
-    <script src="./main.js" type="module"></script>
+<head>
+  <title>Azure Communication Services - Monitor Teams Lobby, Participants, Raised Hands - Sample</title>
+</head>
+
+<body>
+  <h4>Azure Communication Services</h4>
+  <h1>Teams meeting join quickstart</h1>
+  <input id="teams-link-input" type="text" placeholder="Teams meeting link" style="margin-bottom:1em; width: 300px;" />
+  <p><input id="teams-meetingId-input" type="text" placeholder="Teams meetingId"
+      style="margin-bottom:1em; width: 300px;" /></p>
+  <p><input id="teams-passcode-input" type="text" placeholder="Teams meeting Passcode"
+      style="margin-bottom:1em; width: 300px;" /></p>
+  <p>Call state <span style="font-weight: bold" id="call-state">-</span></p>
+  <p><span style="font-weight: bold" id="recording-state"></span></p>
+  <div>
+    <button id="join-meeting-button" type="button" disabled="false">
+      Join Teams Meeting
+    </button>
+    <button id="hang-up-button" type="button" disabled="true">
+      Hang Up
+    </button>
+  </div>
+  <div>
+    <button id="mute-mic-and-speaker-button" type="button" disabled="true">
+      Mute Mic and Speaker
+    </button>
+      
+  </div>
+  <div id="in-lobby-participants">
+
+  </div>
+  <p>
+
+  </p>
+  <div id="in-meeting-participants">
+
+  </div>
+  <p>
+
+  </p>
+  <div id="raised-hands">
+
+  </div>
+
+
+  <script src="./main.js" type="module"></script>
 </body>
 
 </html>
-
-
-
-<!-- <!DOCTYPE html>
-<html>
-  <head>
-    <title>Communication Client - Calling Sample</title>
-  </head>
-  <body>
-    <h4>Azure Communication Services</h4>
-    <h1>Calling Quickstart</h1>
-    <input 
-      id="token-input"
-      type="text"
-      placeholder="User access token"
-      style="margin-bottom:1em; width: 200px;"
-    />
-    </div>
-    <button id="token-submit" type="button">
-        Submit
-    </button>
-    <input 
-      id="callee-id-input"
-      type="text"
-      placeholder="Who would you like to call?"
-      style="margin-bottom:1em; width: 200px; display: block;"
-    />
-    <div>
-      <button id="call-button" type="button" disabled="true">
-        Start Call
-      </button>
-      &nbsp;
-      <button id="accept-call-button" type="button" disabled="true">
-        Accept Call
-      </button>
-      &nbsp;
-      <button id="hang-up-button" type="button" disabled="true">
-        Hang Up
-      </button>
-    </div>
-    <script src="./main.js"></script>
-  </body>
-</html> -->
